src/objects/Complaint_Code_and_Severity__c.object
<CustomObject>
    <fields>
        <fullName>Code_Type__c</fullName>
        <description>Stores if problem code is related complaints or Inquiry</description>
        <label>Code Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Code_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Severity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Full_Code_Text__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>